[gd_scene load_steps=7 format=3 uid="uid://bllehxwlcw8k7"]

[ext_resource type="Texture2D" uid="uid://desr7ybuyt1dt" path="res://assets/Default size/towerDefense_tile180.png" id="1_g2rvu"]
[ext_resource type="Script" path="res://Scripts/rocket_tower.gd" id="1_vsod4"]
[ext_resource type="Texture2D" uid="uid://caxjy1xldvg85" path="res://assets/Default size/towerDefense_tile229.png" id="2_xtixs"]
[ext_resource type="Texture2D" uid="uid://biqo5qgnogwwc" path="res://assets/Circle.png" id="3_pjee0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjqo6"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_6demv"]
radius = 200.0

[node name="RocketTower" type="Node2D"]
script = ExtResource("1_vsod4")

[node name="Bottom" type="Sprite2D" parent="."]
texture = ExtResource("1_g2rvu")

[node name="Top" type="Sprite2D" parent="."]
texture = ExtResource("2_xtixs")

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
shape = SubResource("RectangleShape2D_wjqo6")

[node name="Range" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_6demv")

[node name="Range" type="Sprite2D" parent="Range"]
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_pjee0")

[node name="BottomRed" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.8, 0, 0, 1)
texture = ExtResource("1_g2rvu")

[node name="Bullets" type="Node2D" parent="."]

[connection signal="mouse_entered" from="Tower" to="." method="_on_tower_mouse_entered"]
[connection signal="mouse_exited" from="Tower" to="." method="_on_tower_mouse_exited"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
